+ first commit - more tests need to be written - add a smart feature so that '10 days' will not be converted to '1 week and 3 days'.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by JetBrains WebStorm 6.0.1 for binding GitHub repository
+A simple library for converting time to easy human readable format. See tests for examples.
